--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,11 +8,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         {# Inclusions des fichiers CSS généraux du site #}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"> {#Font Awesome#}
+        <link rel="icon" href="{{ asset('favicon.ico') }}">
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         <link rel="stylesheet" href="{{ asset('css/style-error.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/simple-sidebar.css') }}" >
-        <link rel="stylesheet" href="{{ asset('css/style_film_manga_serie.css') }}" >
+        <link rel="stylesheet" href="{{ asset('css/simple-sidebar.css') }}"
 
          {# Inclusion des fichiers CSS individuels des pages #}
         {% block stylesheets %}{% endblock %}
@@ -30,7 +30,7 @@
             <div class="list-group list-group-flush">
                 <form class="row form-inline my-2 my-lg-0 search bg-dark">
                     <input class="form-control mr-sm-2" type="search" placeholder="Que cherchez-vous ?" aria-label="Search">
-                    <button class="btn btn-outline-light my-2 my-sm-0 mt-1" type="submit">Rechercher</button>
+                    <button class="btn btn-outline-light gold my-2 my-sm-0 mt-1" type="submit">Rechercher</button>
                 </form>
                 {#Boutons si l'utilisateur est co#}
                 {% if app.user %}
@@ -49,18 +49,13 @@
                 <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-asterisk"></i> Mentions légales</a>
             </div>
 
-
         <!-- /#sidebar-wrapper --></div>
-
 
     <!-- Page Content -->
         <div id="page-content-wrapper">
-
             <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
-                <button class="btn btn-outline-light" id="menu-toggle"> Menu</button>
-
+                <button class="btn btn-outline-light gold" id="menu-toggle"> Menu</button>
            </nav>
-
 
             {# Affichage du contenu principal des pages #}
             {% block body %}{% endblock %}
