patch correctif réglages doctrine_migrations + slugs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,7 +199,7 @@ hr{
 
 .harryP{
     font-family: 'HarryP';
-    font-size: larger;
+    font-size: 1.5rem;
 }
 
 /*Titres de la page catalogue (='series, films, mangas')*/
