--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -11,7 +11,7 @@
 
         <!--Partie principale de la page d'accueil-->
         <div class="row main-home">
-            <img src="{{ asset('img/fond_mosaic_film_moitier1.jpg') }}" alt="Bannière accueil" id="home-ban">
+            <div id="home-ban"></div>
 
             <div class="view col-12 text-center px-4 py-4">
                 <h1>Bienvenue sur DDA TV</h1>
@@ -20,7 +20,7 @@
                 <p class="pt-2">Trouvez VOTRE nouvelle série ou nouveau film préféré, en lisant les fiches techniques contenues dans notre catalogue.</p>
             </div>
 
-            <img src="{{ asset('img/fond_mosaic_film_moitier2.jpg') }}" alt="Bannière accueil 2" id="home-ban2">
+            <div id="home-ban2"></div>
         </div>
 
         <!--Footer-->
