--- a/templates/main/profil.html.twig
+++ b/templates/main/profil.html.twig
@@ -32,7 +32,7 @@
             
             {% if app.user.favoriteMovies is empty %} {#Si aucun film a affiché message d'erreur #}
 
-                <p>Vous ne suivez aucun film !</p>
+                <p class="mb-5 p-4">Vous ne suivez aucun film !</p>
 
             {% else %} {# Sinon on afiche les films #}
 
@@ -69,7 +69,7 @@
         {# liste des séries ###############################################################}
         <div class="row">
             <div class="col-12 text-center">
-                <h2 >Liste des films</h2>
+                <h2 >Liste des série</h2>
             </div>
         </div>
 
@@ -77,7 +77,7 @@
             
             {% if app.user.favoriteSeries is empty %} {#Si aucun film a affiché message d'erreur #}
 
-                <p>Vous ne suivez aucun film !</p>
+                <p class="mb-5 p-4">Vous ne suivez aucune séries !</p>
 
             {% else %} {# Sinon on afiche les films #}
 
