--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,10 +10,12 @@
     <div class="container-fluid">
         
         
-        {# Affichage des messages flashs de type "success" si il y en a #}
-        {% include 'partials/flashes/success.html.twig' %}
-        {# Affichage des messages flashs de type "error" si il y en a #}
-        {% include 'partials/flashes/error.html.twig' %}
+        <div class="col-md-8 offset-md-2">
+            {# Affichage des messages flashs de type "success" si il y en a #}
+            {% include 'partials/flashes/success.html.twig' %}
+            {# Affichage des messages flashs de type "error" si il y en a #}
+            {% include 'partials/flashes/error.html.twig' %}
+        </div>
 
         {# Titre h1 #}
         <div class="row">
@@ -30,14 +32,13 @@
                 
                     {% if app.user %}
                         <div class="mb-3">
-                            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                            Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
                         </div>
                     {% endif %}
                 
-                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
                     <label for="inputEmail">Email</label>
                     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-                    <label for="inputPassword">Password</label>
+                    <label for="inputPassword">Mot de passe</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" required>
                 
                     <input type="hidden" name="_csrf_token"
@@ -55,8 +56,8 @@
                         </div>
                     #}
                 
-                    <button class="btn btn-lg btn-primary" type="submit">
-                        Sign in
+                    <button class="btn btn-lg btn-primary col-12 my-3" type="submit">
+                        connexion
                     </button>
                 </form>
             </div>
