--- a/templates/catalogue/serieList.html.twig
+++ b/templates/catalogue/serieList.html.twig
@@ -26,7 +26,7 @@
                     <div class="col mb-4">
 
                             <div class="card h-100 white-shadow">
-                                <img src="{{ serie.poster }}" class="card-img-top" alt="Jurassic Park">
+                                <img src="{{ asset(serie.poster) }}" class="card-img-top" alt="jaquette de la série">
                                 <div class="card-body">
                                     <a href="#" title="Voir la fiche technique"><h5 class="card-title"><bold>{{ serie.title }}</bold></h5></a>
                                     <p class="card-text">{{ serie.summary }}</p>
