--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -56,7 +56,7 @@
                         </div>
                     #}
                 
-                    <button class="btn btn-lg btn-primary col-12 my-3" type="submit">
+                    <button class="btn btn-outline-primary col-12 my-3" type="submit">
                         connexion
                     </button>
                 </form>
